# hublabio

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
apps/ai/: Cargo.toml
apps/ai/src/: lib.rs
apps/core/: Cargo.toml
apps/core/browser/: mod.rs
apps/core/files/: mod.rs
apps/core/src/: browser.rs  files.rs  lib.rs
apps/system/: Cargo.toml
apps/system/monitor/: mod.rs
apps/system/settings/: mod.rs
apps/system/src/: lib.rs  monitor.rs  settings.rs
docs/: ARCHITECTURE.md  GETTING_STARTED.md  HARDWARE_TESTING.md  JUPITER_INTEGRATION.md  MODEL_TRAINING.md  PROTOTYPE.md  TESTING.md
hal/: Cargo.toml
hal/src/: arm64.rs  cpu.rs  gpio.rs  interrupts.rs  lib.rs  memory.rs  riscv.rs  timer.rs  uart.rs  x86.rs
kernel/: Cargo.toml
kernel/boot/: stage1.S  stage2.rs
kernel/core/: scheduler.rs
kernel/src/: aslr.rs  auth.rs  capability.rs  cgroup.rs  console.rs  coredump.rs  cow.rs  dev.rs  epoll.rs  exec.rs  flock.rs  futex.rs  lib.rs  namespace.rs  netfilter.rs  oom.rs  pagefault.rs  panic.rs  pipe.rs  procfs.rs  ptrace.rs  random.rs  rlimit.rs  seccomp.rs  shell.rs  signal.rs  smp.rs  sync.rs  task.rs  tty.rs  unix_socket.rs  waitqueue.rs  watchdog.rs
kernel/src/arch/: mod.rs
kernel/src/arch/aarch64/: exception.rs  interrupt.rs  mmu.rs  mod.rs
kernel/src/boot/: cmdline.rs  init.rs  mod.rs  platform.rs
kernel/src/drivers/: dtb.rs  framebuffer.rs  gpio.rs  input.rs  mod.rs  power.rs  sdmmc.rs  uart.rs
kernel/src/drivers/usb/: device.rs  hcd.rs  hub.rs  mod.rs
kernel/src/fs/: block.rs  ext4.rs  fat32.rs  mod.rs  ramfs.rs
kernel/src/init/: mod.rs  service.rs
kernel/src/ipc/: mod.rs
kernel/src/memory/: allocator.rs  heap.rs  mod.rs  paging.rs  pool.rs
kernel/src/net/: arp.rs  dhcp.rs  dns.rs  ethernet.rs  icmp.rs  ip.rs  mod.rs  socket.rs  tcp.rs  udp.rs  wifi.rs
kernel/src/process/: context.rs  elf.rs  mod.rs
kernel/src/scheduler/: ai.rs  mod.rs  policy.rs
kernel/src/security/: audit.rs  capabilities.rs  mod.rs  sandbox.rs  signing.rs
kernel/src/syscall/: mod.rs
kernel/src/time/: mod.rs
kernel/src/vfs/: mod.rs
pkg/: Cargo.toml
pkg/manager/: mod.rs
pkg/repo/: mod.rs
pkg/src/: lib.rs
runtime/: Cargo.toml
runtime/ai/inference/: engine.rs
runtime/src/: lib.rs
runtime/src/ai/: inference.rs  mod.rs  quantization.rs  sampling.rs  tokenizer.rs
runtime/src/ai/npu/: backend.rs  hailo.rs  mod.rs
runtime/src/distributed/: cluster.rs  mod.rs  protocol.rs  tensor_parallel.rs
runtime/src/moe/: mod.rs
sdk/: Cargo.toml
sdk/src/: ai.rs  fs.rs  ipc.rs  lib.rs  net.rs  sys.rs  ui.rs
services/ai/: Cargo.toml
services/ai/src/: lib.rs
services/media/: Cargo.toml
services/media/src/: lib.rs
services/network/: Cargo.toml
services/network/src/: lib.rs
services/system/: Cargo.toml
services/system/src/: lib.rs
services/update/: Cargo.toml  mod.rs
services/update/src/: lib.rs  update.rs
shell/: Cargo.toml
shell/gui/: compositor.rs  font.rs  input.rs  layout.rs  mod.rs  render.rs  theme.rs  window.rs
shell/gui/widgets/: button.rs  label.rs  list.rs  mod.rs  panel.rs  scroll.rs  textbox.rs
shell/src/: ai_chat.rs  lib.rs  themes.rs
shell/src/commands/: ai.rs  fs.rs  mod.rs  pkg.rs  system.rs
shell/tui/: app.rs  editor.rs  mod.rs  scroll.rs
shell/voice/: audio.rs  mod.rs  stt.rs  tts.rs  vad.rs
tools/debug/: Cargo.toml
tools/debug/src/: lib.rs
tools/dev/: Cargo.toml  debugger.rs  inspector.rs  mod.rs  profiler.rs  tracer.rs
tools/dev/src/: debugger.rs  inspector.rs  lib.rs  profiler.rs  tracer.rs
tools/flash/: Cargo.toml
tools/flash/src/: lib.rs
