[package]
name = "hublab-hal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Hardware Abstraction Layer for HubLab IO"

[features]
default = ["arm64"]
arm64 = []
riscv = []
x86 = []

[dependencies]
spin.workspace = true
bitflags.workspace = true
log.workspace = true

[target.'cfg(target_arch = "aarch64")'.dependencies]
# ARM64 specific dependencies

[target.'cfg(target_arch = "riscv64")'.dependencies]
# RISC-V specific dependencies
