[package]
name = "hublabio-kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["staticlib"]

[dependencies]
spin.workspace = true
bitflags.workspace = true
log.workspace = true
linked_list_allocator.workspace = true

[features]
default = ["arm64"]
arm64 = []
riscv64 = []
ai-scheduler = []
verbose-boot = []

[build-dependencies]
cc = "1.0"
