[package]
name = "hublabio-pkg"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "HubLab IO Package Manager"

[dependencies]
log = "0.4"
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

[features]
default = ["manager", "repo"]
manager = []
repo = []
