[package]
name = "hublabio-shell"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
spin = "0.9"
log = "0.4"
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

[features]
default = ["tui"]
tui = []
voice = []
gui = []
